# RustShell

./: .gitignore  Cargo.toml  README.md
src/: main.rs  prompt.rs
src/command/: builtin.rs  cmd.rs  cmd_cd.rs  cmd_chat.rs  cmd_fileshare.rs  cmd_pwd.rs  commands.rs  consts.rs  mod.rs
