[package]
name = "RustShell"
version = "0.1.0"
authors = ["Hyunmin Shin <shm1193@gmail.com>"]
edition = "2021"

[dependencies]
futures = "0.3"
libp2p = "0.43.0"
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.4"
# nix = "0.23.1"
